examples/resources/pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
spec:
  containers:
  - name: pod-a-1
    image: "centos:7"
    command: ["/bin/bash"]
    stdin: true
    tty: true
    securityContext:
      privileged: true
