examples/resources/pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
spec:
  containers:
  - name: pod-b-1
    image: "centos:7"
    command: ["/bin/bash"]
    stdin: true
    tty: true
    securityContext:
      privileged: true
