examples/resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test15
spec:
  containers:
  - name: test15
    image: nginx:stable
