examples/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      nodePort: 30080
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
