examples/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /testpath
        backend:
          # serviceName: test
          # servicePort: 80
          service:
            name: service2
            port:
              number: 80
